--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,12 @@
         <item>Food</item>
         <item>Others</item>
     </string-array>
+
+    <string-array name="expense_types">
+        <item>Food</item>
+        <item>Transport</item>
+        <item>Utilities</item>
+        <item>Entertainment</item>
+        <item>Other</item>
+    </string-array>
 </resources>
